fix: removing unnecessary div labelWrapp

--- a/src/components/Task.module.css
+++ b/src/components/Task.module.css
@@ -39,10 +39,6 @@
     text-decoration: line-through;
 }
 
-.labelWrap {
-    display: inline-block;
-}
-
 .checkbox {
     display: inline-block;
 
